syntax = "proto3";

package telemetry.service.hubrouter;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.hubrouter";
option java_outer_classname = "HubRouterControllerProto";

service HubRouterController {
  rpc handleDeviceAction (DeviceActionRequest) returns (google.protobuf.Empty);
}

message DeviceActionRequest {
  string hub_id = 1;
  string scenario_name = 2;
  DeviceActionProto action = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message DeviceActionProto {
  string sensor_id = 1;
  string type = 2;
  int32 value = 3;
}